@@ -16,4 +16,4 @@ Warning: Octal escape sequence overflow \400 is greater than \377 in %s on line 
 
 Deprecated: Using ${expr} (variable variables) in strings is deprecated, use {${expr}} instead in %s on line %d
 
-Warning: Undefined variable $ in %s on line %d
+Warning: Undefined variable $%0 in %s on line %d
